--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
 <body>
     @@include('./components/_header.html')
     @@include('./components/_search.html')
-
+    @@include('./components/_products.html')
+    @@include('./components/_product-slider.html')
+    @@include('./components/_scripts.html')
 </body>
 
 </html>
