--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     @@include('./components/_search.html')
     @@include('./components/_products.html')
     @@include('./components/_product-slider.html')
+    @@include('./components/_advantages.html')
     @@include('./components/_scripts.html')
 </body>
 
