--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     @@include('./components/_products.html')
     @@include('./components/_product-slider.html')
     @@include('./components/_advantages.html')
+    @@include('./components/_author.html')
     @@include('./components/_scripts.html')
 </body>
 
