--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     @@include('./components/_product-slider.html')
     @@include('./components/_advantages.html')
     @@include('./components/_author.html')
+    @@include('./components/_tutorial.html')
+    @@include('./components/_footer.html')
     @@include('./components/_scripts.html')
 </body>
 
